# rejection-sampling-recipes

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_cn.md  README.md  coverage.xml  pyproject.toml  requirements-vllm.txt  requirements.txt  run.py  test_imports.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: config.yaml  dpo.yaml  multi_sft.yaml  sft.yaml
configs/dev/: test_verifier.example.yaml
data/: llm_judge_cache.json  verifier_test_results.json
docs/: configuration.md  design.md  early-stop.md  getting-started.md  index.md  pipeline_design_v1.md  recipes.md  reliability.md  testing_checklist.md
examples/nemotron-post-training-dataset-v2/: FORMAT_INSTRUCTION_USAGE.md  download.py  process.py  run_pipeline.sh  split.py  transform.py
recipes/: __init__.py
recipes/sft/: __init__.py  config.py  config.yaml  recipe.py  tools.py
recipes/sft/entrypoint/: run.py  run.sh
scripts/: clean_resume_id_batch.py  convert_cot_format.py  dev_test_mcq_verifier.py  preprocess_images.py
scripts/launch_serve/: README.md  model_config_example.yaml  start_model_service.sh  start_vllm_service.sh  vllm_config_example.yaml
src/: __init__.py  base.py  pipeline.py  preprocessor.py  state.py
src/formatter/: __init__.py  base.py  dpo_formatter.py  multi_sft_formatter.py  registry.py  sft_formatter.py
src/sampler/: __init__.py  base.py  openai_sampler.py  vllm_sampler.py
src/utils/: __init__.py  data_io.py  response_processor.py
src/verifier/: README.md  README_cn.md  __init__.py  base.py  math_rlvr.py  mcq_llm_judge.py  mcq_rlvr.py  registry.py  test_collector.py
tests/: __init__.py  conftest.py  test_base.py  test_formatter.py  test_pipeline.py  test_placeholder.py  test_sft_recipe.py  test_utils.py  test_verifier.py
tests/fixtures/: model_outputs.json
tests/mock/: text-pic.jsonl  text.jsonl
transforms/: __init__.py  nemotron_mcq.py
